# esp32s2

./: LICENSE  README.md
components/mcu/: CMakeLists.txt
components/nzr/: CMakeLists.txt
components/ws2812x1/: CMakeLists.txt
fsm-inline/: CMakeLists.txt
fsm-inline/main/: CMakeLists.txt  ulp_inline.cpp
fsm-manual/: CMakeLists.txt
fsm-manual/main/: CMakeLists.txt  ulp_example_main.cpp  ulp_manual.cpp
fsm-min/: CMakeLists.txt  Makefile
fsm-min/main/: CMakeLists.txt  CoprocessorULP.cpp  CoreFSM.cpp  CoreRISCV.cpp  MicroControllerUnit.cpp  MicroControllerUnit.hpp  PowerManagementUnit.cpp  PowerManagementUnit.hpp  RegisterRO.hpp  SleepAndWakeupController.cpp  SleepAndWakeupController.hpp  TimerULP.cpp  ValueRO.hpp  ValueRW.cpp  ulp_example_main.cpp
fsm-min/main/ulp/: pulse_cnt.S
fsm-single/main/: CMakeLists.txt  ulp_single.cpp
fsm-timer/: CMakeLists.txt
fsm-timer/main/: CMakeLists.txt  ulp_example_main.cpp  ulp_timer.cpp
projects/ai-matrix/: CMakeLists.txt
projects/drv-ws2812/: CMakeLists.txt
projects/fsm-manual/: .gitignore  CMakeLists.txt
projects/fsm-single/: CMakeLists.txt
projects/fsm-timer/: CMakeLists.txt
projects/gpio-pulse/: CMakeLists.txt
projects/gpio-remote/: CMakeLists.txt  output.txt
projects/gpio-softgen/: CMakeLists.txt  output.txt
projects/io-spi/: .gitignore  CMakeLists.txt
projects/pmu-on-off/: CMakeLists.txt
projects/sleep-deep-fsm-wakeup/: CMakeLists.txt
projects/sleep-hibernate-wakeup/: CMakeLists.txt
projects/sleep-light-fsm-wakeup/: CMakeLists.txt
riscv-single/: CMakeLists.txt  sdkconfig.defaults
(+207 files in other folders)
